@@ -39,7 +39,7 @@ AR-asphalt-friction-mod=Asphalt vehicle friction modifier
 [mod-setting-description]
 AR-use-items-from-bioindustries=If enabled, the production of asphalt tiles requires crushed stone instead of stone bricks.
 AR-use-items-from-woodgasification=If enabled, the production of asphalt tiles requires tar instead of crude oil.
-AR-use-items-from-corrundum=If enabled, the production of asphalt tiles requires 1 asphalt block instead of heavy oil. Asphalt tile output will also be bufffed to 15x instead of 10x.
+AR-use-items-from-corrundum=If enabled, the production of asphalt tiles requires 1 asphalt block instead of heavy oil. Corrundum's asphalt tech will be made a prerequisite. Asphalt tile output will also be bufffed to 15x instead of 10x.
 AR-use-items-from-pypetrol=If enabled, the production of asphalt tiles requires gravel, tar and bitumen.\n[img=utility/warning_white] [font=default-semibold][color=red]This setting will generally overwrite the other mod compatibility settings.[/color][/font]
 AR-use-stone=If enabled, removes the need for stone bricks to produce asphalt tiles.\nIf you enable Bio Industries or Pyanodons compatibility, this setting will do nothing.
 AR-use-crude-oil=If enabled, removes the need for crude oil to produce asphalt tiles.\nIf you enable Wood Gasification or Pyanodons compatibility, this setting will do nothing.
